Enable mkdocs-material code copy feature

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,7 @@ theme:
         icon: material/lightbulb-outline
         name: Switch to light mode
   features:
+    - content.code.copy
     - navigation.footer
     - navigation.top
     - navigation.tracking
